package cookbuddy.model.recipe.attribute;

/**
 * A unit class to model units for each {@code Quantity}.
 */

public class Unit {
    /**
     * UnitSymbol
     */
    public enum UnitSymbol {

    }
}
