@startuml BasicRecipeDiagram
show members

hide circle
skinparam classAttributeIconSize 0

class RecipeBook {
    -recipes : UniqueRecipeList
    +addRecipe()
    +deleteRecipe()
    +list()
    +duplicate()
}

RecipeBook "1..*" *--> "many" Recipe : contains >

class Recipe {
    -name : String
    -ingredients : IngredientList
    -instructions : InstructionList
    -tags : TagList
    +modify()
}

class IngredientList {
    -data : ArrayList<Ingredient>
    +add()
    +set()
    +remove()
    +list()
}

class Ingredient {
    -name : String
    -quantity : Quantity
}

IngredientStore <|--> Freezer : is a very cold & dry <
IngredientStore <|--> Refrigerator : is a cold <
IngredientStore <|--> Larder : is a cool, dark & dry <
IngredientStore "0..*" o-r-> "many" Ingredient : stores <

class InstructionList {
    -data : HashMap<Instruction>
    +add()
    +edit()
    +list()
    +remove()
}

class Instruction {
    -detail : String
}

class TagList {
    -data : ArrayList<Tag>
    +add()
    +remove()
}

class Tag {
    -name : String
}

TagList "0..*" o--> "many" Tag : contains >


class Quantity {
    -amount : Float
    -unit : Unit
}

class Unit {
    -name : String
    -symbol : UnitSymbol
    {static} +convertTo()
}

enum UnitSymbol <<enumeration>> {
    tsp
    tbp
    cup
    ml
    g
    kg
    lb
    fl oz
}

Recipe "1" *-l-> IngredientList : contains >
Recipe "1" *--> InstructionList : contains >
Recipe "1" *--> TagList : contains >


IngredientList "1..*" o-l-> "many" Ingredient : contains >
InstructionList "1..*" o--> "many" Instruction : contains >

Ingredient  *--> Quantity : has amount >
Quantity --> Unit : is measured in >
Unit "*" -- "1" UnitSymbol : has symbol >

class Larder {

}

class Refrigerator {
    -temperature : Double
}

class Freezer {
    -temperature : Double
}

class IngredientStore {
    -capacity : Integer
    -store : IngredientAvailabilityList
    +addIngredient()
}

class IngredientAvailabilityList {
    -availableIngredients : IngredientList
    boolean : isAvailable()
}

IngredientList <|-- IngredientAvailabilityList

@enduml
